--- a/_config.yml
+++ b/_config.yml
@@ -1,29 +1,17 @@
-slogan: "Keep and carry on."
+slogan: "go go power ranger~"
 
-show_heart: true
+show_heart: false
 
 show_slogan: true
 
 menu:
   - title: Archives
-    url: archives
+    url: /donaldwu.github.com/archives/index.html
     intro: "All the articles."
     # icon: "fa fa-archive"
-  - title: Categories
-    url: categories
-    intro: "All the categories."
-    # icon: "fa fa-folder"
-  - title: Tags
-    url: tags
-    intro: "All the tags."
-    # icon: "fa fa-tags"
   - title: About
-    url: about
+    url: /donaldwu.github.com/about/darrenwu.html
     intro: "About me."
-    # icon: "fa fa-user"
-  - title: RSS
-    url: atom.xml
-    intro: "Subscribe me."
     # icon: "fa fa-user"
 
 links:
@@ -62,12 +50,9 @@ duoshuo_shortname:
 
 
 # Analytics (change to yours)
-google_analytics:
-  enable: true
-  siteid: UA-70812759-1
-baidu_tongji:
-  enable: true
-  siteid: cb5448498d7169c668b07c2b255d62c1
+#google_analytics:
+#  enable: false
+#  siteid: 
 
 # search
 #swiftype_key: ZP2ZSuHgipSZfRyU8uTR
